--- a/CABASUS/Main.storyboard
+++ b/CABASUS/Main.storyboard
@@ -769,6 +769,90 @@
             </objects>
             <point key="canvasLocation" x="2.3999999999999999" y="1054.7226386806597"/>
         </scene>
+        <!--Chat Controller-->
+        <scene sceneID="WNO-Kn-Tqg">
+            <objects>
+                <viewController storyboardIdentifier="Chat_Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="YGP-kV-kni" customClass="Chat_Controller" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DmG-We-Mac"/>
+                        <viewControllerLayoutGuide type="bottom" id="gCb-zu-tp0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lof-BR-Meb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mensaje" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SpK-oE-ByC">
+                                <rect key="frame" x="16" y="318" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i7p-4S-z1y">
+                                <rect key="frame" x="16" y="370" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IYN-3X-Kwx">
+                                <rect key="frame" x="9" y="52" width="343" height="253"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="rKx-Tx-A9I" customClass="Custom_Cell_Chat_Adapter">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rKx-Tx-A9I" id="7Mc-0p-MIu">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZD-RW-wwo">
+                                                    <rect key="frame" x="10" y="10" width="233" height="23.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Al4-Xp-Ujp">
+                                                            <rect key="frame" x="10" y="10" width="213" height="3.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="Al4-Xp-Ujp" secondAttribute="trailing" constant="10" id="5Yv-bC-vDa"/>
+                                                        <constraint firstItem="Al4-Xp-Ujp" firstAttribute="leading" secondItem="xZD-RW-wwo" secondAttribute="leading" constant="10" id="8H9-3V-OBm"/>
+                                                        <constraint firstItem="Al4-Xp-Ujp" firstAttribute="top" secondItem="xZD-RW-wwo" secondAttribute="top" constant="10" id="WfS-Ke-9sL"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Al4-Xp-Ujp" secondAttribute="bottom" constant="10" id="bjX-LU-lp1"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="xZD-RW-wwo" secondAttribute="bottom" constant="10" id="4GP-zY-BFf"/>
+                                                <constraint firstItem="xZD-RW-wwo" firstAttribute="top" secondItem="7Mc-0p-MIu" secondAttribute="top" constant="10" id="908-6c-hzk"/>
+                                                <constraint firstItem="xZD-RW-wwo" firstAttribute="leading" secondItem="7Mc-0p-MIu" secondAttribute="leading" constant="10" id="H1n-mt-xka"/>
+                                                <constraint firstAttribute="trailing" secondItem="xZD-RW-wwo" secondAttribute="trailing" constant="100" id="ib3-Wi-bDK"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="constLeft" destination="ib3-Wi-bDK" id="8ii-ov-iUt"/>
+                                            <outlet property="constRight" destination="H1n-mt-xka" id="HUk-xg-xgD"/>
+                                            <outlet property="lblMensaje" destination="Al4-Xp-Ujp" id="FPP-yl-CQ2"/>
+                                            <outlet property="viewMensaje" destination="xZD-RW-wwo" id="e5K-K5-6Uk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <connections>
+                        <outlet property="btnEnviarMensaje" destination="i7p-4S-z1y" id="ecz-9I-5Fj"/>
+                        <outlet property="tableChat" destination="IYN-3X-Kwx" id="gHN-dQ-cJ2"/>
+                        <outlet property="txtMensaje" destination="SpK-oE-ByC" id="oy5-Nj-u0T"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k6m-WA-HdG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="0.80000000000000004" y="1709.5952023988007"/>
+        </scene>
         <!--Settings View Controller-->
         <scene sceneID="m3n-Kd-85P">
             <objects>
