--- a/CABASUS/Main.storyboard
+++ b/CABASUS/Main.storyboard
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="xhS-l0-QaQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
@@ -644,7 +644,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PXL-dv-cjq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2055.2" y="1054.723"/>
+            <point key="canvasLocation" x="-2055.1999999999998" y="1054.723"/>
         </scene>
         <!--Time Line View Controller-->
         <scene sceneID="Fch-pY-bhb">
@@ -767,7 +767,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hlj-9J-6Nz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2.4" y="1054.723"/>
+            <point key="canvasLocation" x="2.3999999999999999" y="1054.723"/>
         </scene>
         <!--Chat Controller-->
         <scene sceneID="WNO-Kn-Tqg">
@@ -798,7 +798,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="rKx-Tx-A9I" customClass="Custom_Cell_Chat_Adapter" reuseIdentifier="celdaChat">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="celdaChat" id="rKx-Tx-A9I" customClass="Custom_Cell_Chat_Adapter">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rKx-Tx-A9I" id="7Mc-0p-MIu">
@@ -840,18 +840,43 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tGs-F7-IuJ">
+                                <rect key="frame" x="16" y="408" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNr-3p-C2G">
+                                        <rect key="frame" x="125" y="50" width="42" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Gj-dN-arg">
+                                        <rect key="frame" x="73" y="40" width="30" height="48"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="&lt;">
+                                            <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.84313725490000002" green="0.20192623139999999" blue="0.15136727689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <connections>
+                        <outlet property="btnBack" destination="6Gj-dN-arg" id="BhC-iv-CZg"/>
                         <outlet property="btnEnviarMensaje" destination="i7p-4S-z1y" id="ecz-9I-5Fj"/>
+                        <outlet property="lblNombre" destination="cNr-3p-C2G" id="MsG-9z-ng7"/>
                         <outlet property="tableChat" destination="IYN-3X-Kwx" id="gHN-dQ-cJ2"/>
                         <outlet property="txtMensaje" destination="SpK-oE-ByC" id="oy5-Nj-u0T"/>
+                        <outlet property="viewFondo" destination="tGs-F7-IuJ" id="4Al-Hs-BqA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k6m-WA-HdG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.8" y="1709.595"/>
+            <point key="canvasLocation" x="0.80000000000000004" y="1709.595"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="m3n-Kd-85P">
@@ -883,7 +908,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZE-dY-6sY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="696.8" y="1054.723"/>
+            <point key="canvasLocation" x="696.79999999999995" y="1054.723"/>
         </scene>
         <!--Tabs View Controller-->
         <scene sceneID="3tx-XD-pww">
@@ -921,6 +946,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bell" width="612" height="792"/>
         <image name="cabasuslogo.png" width="625" height="209"/>
         <image name="horse" width="612" height="792"/>
         <image name="map" width="612" height="792"/>
